<resources>
    <string name="app_name">BookEasy</string>
    <string name="bookRoomBtn">Book Room</string>
    <string name="bookTableBtn">Book Table</string>
    <string name="AccountBtn">Account</string>
    <string name="text">Reserve Your Room</string>
    <string name="checkin">Check-in Date  :</string>
    <string name="checkout">Check-Out Date :</string>
    <string name="input">Enter here</string>
    <string name="pkg">Package :</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="regular">Regular</string>
    <string name="noofroom">No of Rooms :</string>
    <string name="pref">Preferences :</string>
    <string name="breakf">Breakfast and Lunch</string>
    <string name="all">All</string>
    <string name="dinner">Dinner</string>
    <string name="date">" "</string>
    <string name="img"></string>
    <string name="next">Reserve</string>
    <string name="reserve">Confirm Your Booking</string>
    <string name="imgs"></string>
    <string name="inputData">No Booking</string>
    <string name="confirmRes">Check Your Reservation</string>
    <string name="Update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="bookList">Booking List</string>
    <string name="resList">Your Booking Details</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="updateBooking">Update Your Booking</string>
    <string name="roomHome">Manage Your Booking</string>
    <string name="roomHomeBook">Make a Booking</string>
    <string name="mngBooking">Check Your booking</string>
    <string name="click">Click Here</string>
    <string name="hotel">Thai Hotel</string>
    <string name="app">BookEasy App</string>
    <string name="table">Book Table</string>
    <string name="back">Back</string>
    <string name="selectedRadio">package</string>

    //Thiwanka
    <string name="app_name1">TableBooking</string>
    <string name="getStart">Get Start</string>
    <string name="startBk">Start Booking Here!</string>
    <string name="name">Name</string>
    <string name="contact">Contact Number</string>
    //date
    <string name="time">Time</string>
    <string name="noGuest">Number of Guests</string>
    <string name="events">Special Events</string>
    <string name="bday">Birthday</string>
    <string name="party">Party</string>
    <string name="location">Location</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="cancel">Cancel</string>
    //next
    <string name="urcontact">Your Contact</string>
    <string name="urname">Your Name</string>
    <string name="urDate">Date</string>
    <string name="urTime">Time</string>
    <string name="urGuests">Number of Peoples</string>
    <string name="youselected">You Have Selected</string>
    <string name="confrim">Confirm</string>
    //back
    <string name="success">You Have Successfully Booked a Table</string>
    <string name="home">Home</string>
    <string name="viewBooking">View Bookings</string>
    <string name="update">Update</string>
    //delete
    <string name="event">Event</string>
    <string name="Eventlocation">Event Location</string>
    <string name="done">done</string>
    <string name="UPdate"></string>
    <string name="UPtime"></string>
    <string name="UPguest"></string>
    <string name="UPevent"></string>
    <string name="UPlocation"></string>
    <string name="bTable">Book a table</string>
    <string name="vResere">Check Reservation</string>
    <string name="foodorder">Order Food</string>
    <string name="orderbook">Order Food</string>
    <string name="checkorder">Check Your Order</string>
    <string name="orderManage">Manage Your Order</string>
    <string name="orderurfood">Order Your Food</string>
    <string name="foodCat">Choose Your Flavour</string>
    <string name="burger">Burger</string>
    <string name="sandwitch">Sandwitch</string>
    <string name="Submarine">Submarine</string>
    <string name="sandwich">Sandwich</string>
    <string name="bPrice">500/-</string>
    <string name="SanPrice">300/-</string>
    <string name="subPrice">200/-</string>
    <string name="qty">Quantity</string>
    <string name="type">Type</string>
    <string name="veg">Veg</string>
    <string name="nonveg">Non-Veg</string>
    <string name="olist">Order List</string>
    <string name="fname">Food Name</string>
    <string name="price">Price</string>
    <string name="updateorder">Update Your Order</string>

    //chamod


</resources>
