<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".orderFood">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="453dp"
        android:layout_height="290dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imgs"
        android:src="@drawable/darkfood"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    />


    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:background="#00FFFDFD"
        android:text="@string/orderurfood"
        android:textColor="#C6FCF9F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/carter_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/packageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <RadioButton
            android:id="@+id/Submarine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submarine"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="303dp" />

        <RadioButton
            android:id="@+id/Burger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burger"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="210dp" />

        <RadioButton
            android:id="@+id/Sandwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sandwich"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="259dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="92dp"
        android:text="@string/qty"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/qty"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/next"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/orderbook"
        android:textColor="#471547"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefRadioGrp" />

    <RadioGroup
        android:id="@+id/prefRadioGrp"
        android:layout_width="184dp"
        android:layout_height="95dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="456dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/Veg"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/veg" />

        <RadioButton
            android:id="@+id/Non_Veg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nonveg" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="284dp"
        android:text="@string/foodCat"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/bPrice"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/packageRadioGroup" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/SanPrice"
        app:layout_constraintStart_toEndOf="@+id/packageRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/subPrice"
        app:layout_constraintStart_toEndOf="@+id/packageRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>